# scantailor-universal

./: .gitignore  .gitmodules  AbstractFilter.h  AbstractImageTransform.h  AffineImageTransform.cpp  AffineImageTransform.h  AffineTransformedImage.cpp  AffineTransformedImage.h  Application.cpp  Application.h  ApplyToDialog.cpp  ApplyToDialog.h  AtomicFileOverwriter.cpp  AtomicFileOverwriter.h  AutoSaveTimer.cpp  AutoSaveTimer.h  BackgroundExecutor.h  BackgroundTask.cpp  BasicImageView.cpp  BasicImageView.h  BubbleAnimation.h  CMakeLists.txt  CiCdOutput  CommandLine.cpp  CommandLine.h  CompositeCacheDrivenTask.h  ConsoleBatch.cpp  ConsoleBatch.h  ContentBox.cpp  ContentBox.h  ContentBoxPropagator.cpp  ContentBoxPropagator.h  ContentSpanFinder.cpp  DebugImageView.cpp  DebugImageView.h  DebugImages.cpp  DebugImages.h  DebugImagesImpl.cpp  DebugImagesImpl.h  DebugViewFactory.h  (+162 more)
acceleration/: AcceleratableOperations.h  AccelerationPlugin.h  CMakeLists.txt  DefaultAccelerationProvider.cpp  DefaultAccelerationProvider.h  NonAcceleratedOperations.cpp  NonAcceleratedOperations.h  acceleration_config.h
acceleration/opencl/: BinaryFill.cpp  BinaryFill.h  BinaryRasterOp.cpp  BinaryRasterOp.h  CMakeLists.txt  Copy.cpp  Copy.h  HitMissTransform.cpp  HitMissTransform.h  OpenCLAcceleratedOperations.cpp  OpenCLAcceleratedOperations.h  OpenCLAffineTransform.cpp  OpenCLAffineTransform.h  OpenCLDewarp.cpp  OpenCLDewarp.h  OpenCLGaussBlur.cpp  OpenCLGaussBlur.h  OpenCLGrid.h  OpenCLPlugin.cpp  OpenCLPlugin.h  OpenCLSavGolFilter.cpp  OpenCLSavGolFilter.h  OpenCLTextFilterBank.cpp  OpenCLTextFilterBank.h  RenderPolynomialSurface.cpp  RenderPolynomialSurface.h  Transpose.cpp  Transpose.h  Utils.cpp  Utils.h  resources.qrc
dewarping/: CMakeLists.txt  Curve.cpp  Curve.h  CylindricalSurfaceDewarper.cpp  CylindricalSurfaceDewarper.h  DepthPerception.cpp  DepthPerception.h  DetectVertContentBounds.cpp  DetectVertContentBounds.h  DetectVerticalBounds.cpp  DetectVerticalBounds.h  DewarpingImageTransform.cpp  DewarpingImageTransform.h  DewarpingPointMapper.h  DistortionModel.cpp  DistortionModel.h  DistortionModelBuilder.cpp  DistortionModelBuilder.h  RasterDewarper.cpp  RasterDewarper.h  TextLineRefiner.cpp  TextLineRefiner.h  TextLineSegmenter.cpp  TextLineSegmenter.h  TextLineTracer.cpp  TextLineTracer.h  TopBottomEdgeTracer.cpp  TopBottomEdgeTracer.h  TowardsLineTracer.cpp  TowardsLineTracer.h  dewarping_config.h
exporting/: CMakeLists.txt  ExportModes.h  ExportThread.cpp  ExportThread.h  ImageSplitOps.cpp  ImageSplitOps.h
filters/deskew/: ApplyDialog.cpp  ApplyDialog.h  CMakeLists.txt  CacheDrivenTask.cpp  CacheDrivenTask.h  Dependencies.cpp  Dependencies.h  DeskewApplyWidget.cpp  DeskewApplyWidget.h  DewarpingMode.cpp  DewarpingMode.h  DewarpingParams.cpp  DewarpingParams.h  DewarpingThumbnail.cpp  DewarpingThumbnail.h  DewarpingView.cpp  DewarpingView.h  DistortionType.cpp  DistortionType.h  Filter.cpp  Filter.h  ImageView.cpp  ImageView.h  OptionsWidget.cpp  OptionsWidget.h  Params.cpp  (+15 more)
foundation/: AlignedArray.h  AutoRemovingFile.h  CMakeLists.txt  CachingFactory.h  CopyableByMemcpy.h  DebugImages.cpp  DebugImages.h  DynamicPool.h  FastQueue.h  FlagOps.h  Grid.h  GridAccessor.h  GridLineTraverser.cpp  GridLineTraverser.h  IndexSequence.h  IntrusivePtr.h  LineIntersectionScalar.h  MatMNT.h  MatT.h  MaxAccumulator.h  MinMaxAccumulator.h  NonCopyable.h  NumericTraits.h  ObjectSwapper.h  ObjectSwapperFactory.h  ObjectSwapperImpl.h  ObjectSwapperImplGrid.h  ObjectSwapperImplQImage.h  PerformanceTimer.cpp  PerformanceTimer.h  PriorityQueue.h  Property.h  PropertyFactory.h  PropertySet.cpp  PropertySet.h  Proximity.cpp  Proximity.h  QtSignalForwarder.cpp  QtSignalForwarder.h  RefCountable.h  (+17 more)
imageproc/: AbstractImageTransform.h  AdjustBrightness.h  AffineImageTransform.cpp  AffineImageTransform.h  AffineTransform.cpp  AffineTransform.h  AffineTransformedImage.cpp  AffineTransformedImage.h  BWColor.h  BWPixelProxy.h  BadAllocIfNull.cpp  BadAllocIfNull.h  Binarize.cpp  Binarize.h  BinaryImage.cpp  BinaryImage.h  BinaryThreshold.cpp  BinaryThreshold.h  BitOps.cpp  BitOps.h  CMakeLists.txt  ColorForId.h  ColorInterpolation.h  ColorMixer.h  ConnComp.h  ConnCompEraser.h  ConnCompEraserExt.h  Connectivity.h  ConnectivityMap.cpp  ConnectivityMap.h  Constants.h  DrawOver.h  FindPeaksGeneric.h  GaussBlur.cpp  GaussBlur.h  GrayImage.cpp  GrayImage.h  GrayRasterOp.h  Grayscale.cpp  Grayscale.h  (+54 more)
interaction/: CMakeLists.txt  DragHandler.cpp  DragWatcher.h  DraggableLineSegment.h  DraggablePoint.cpp  InteractionHandler.cpp  InteractionHandler.h  InteractionState.cpp  InteractionState.h  InteractiveXSpline.cpp  InteractiveXSpline.h  ObjectDragHandler.h  ZoomHandler.cpp  ZoomHandler.h
math/: ArcLengthMapper.cpp  ArcLengthMapper.h  CMakeLists.txt  HomographicTransform.h  LineBoundedByPolygon.cpp  LineBoundedByPolygon.h  LineBoundedByRect.cpp  LineBoundedByRect.h  LinearFunction.cpp  LinearFunction.h  LinearSolver.cpp  MatrixCalc.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.cpp  QuadraticFunction.h  SidesOfLine.h  ToLineProjector.cpp  ToLineProjector.h  XSpline.cpp  XSpline.h  math_config.h
packaging/: CMakeLists.txt
src/: CMakeLists.txt  Doxyfile
zones/: BasicSplineVisualizer.cpp  BasicSplineVisualizer.h  CMakeLists.txt  EditableEllipse.cpp  EditableEllipse.h  EditableSpline.cpp  EditableSpline.h  EditableZoneSet.cpp  EditableZoneSet.h  LocalClipboard.cpp  LocalClipboard.h  SerializableEllipse.cpp  SerializableEllipse.h  SerializableSpline.cpp  SerializableSpline.h  SplineSegment.cpp  SplineSegment.h  SplineVertex.cpp  Zone.cpp  Zone.h  ZoneContextMenuInteraction.cpp  ZoneContextMenuInteraction.h  ZoneContextMenuItem.h  ZoneCreationInteraction.cpp  ZoneCreationInteraction.h  ZoneDefaultInteraction.cpp  ZoneDefaultInteraction.h  ZoneDragInteraction.cpp  ZoneDragInteraction.h  ZoneEllipseVertexDragInteraction.cpp  ZoneEllipseVertexDragInteraction.h  ZoneInteractionContext.cpp  ZoneInteractionContext.h  ZoneSet.cpp  ZoneSet.h  ZoneVertexDragInteraction.cpp  ZoneVertexDragInteraction.h
(+1087 files in other folders)
